--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npx nodemon",
-    "dev": "node --loader ts-node/esm ./script.ts"
+    "dev": "node --loader ts-node/esm ./script.ts",
+    "devStart":"nodemon --exec \"node --loader ts-node/esm\" script.ts"
   },
   "keywords": [],
   "author": "",
