Containerized and create dokcerfile and compose for the app

--- a/docker-compose-prissma-app.yml
+++ b/docker-compose-prissma-app.yml
@@ -18,3 +18,16 @@ services:
     restart: always
     ports:
       - 8080:8080
+
+  crud_app:
+    build:
+      dockerfile: NodeAppDockerFile
+    ports:
+      - "3000:3000"
+    volumes:
+      - .:/app
+    environment:
+      - DATABASE_URL=postgresql://postgres:postgres@db:5432/testDB
+      - PORT=3000
+    depends_on:
+      - db
